# speedtest-ui

./: .prettierignore  README.md  eslint.config.mjs  index.html  package.json  pnpm-lock.yaml  tailwind.config.ts  tsconfig.node.json  vite.config.ts
.github/workflows/: release.yml
scripts/: bin.cjs
src/: App.tsx  interface.ts  main.tsx
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  models.rs
src/components/: styled.ts
src/components/animate-text/: index.tsx
src/components/chart/: index.tsx
src/components/home/: index.tsx
src/components/result/: index.tsx  value-text.tsx
src/components/theme-switcher/: index.tsx
src/components/ui/: button.tsx  sonner.tsx  toggle-group.tsx
src/context/: index.ts  interface.ts
src/hooks/: index.ts  use-chart-data.ts  use-speedtest.ts  use-throttle-state.ts
src/utils/: index.ts
